Added support for Safari Battles (pre-Alpha)
Not tested yet. Could be very buggy.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-project.PircBot2=C:\\Users\\Michael\\Documents\\NetBeansProjects\\PircBot2
+project.PircBot2=/home/pi/Wow_Deku/PircBot2
 user.properties.file=C:\\Users\\Michael\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
