--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.httpclient-4.4.1.jar}:\
     ${reference.PircBot2.jar}:\
+    ${reference.PircBot2-1.jar}:\
     ${file.reference.httpcore-4.4.1.jar}:\
     ${file.reference.commons-logging-1.2.jar}
 # Space-separated list of extra javac options
@@ -68,6 +69,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.PircBot2=../../PircBot2
+project.PircBot2-1=../PircBot2
+reference.PircBot2-1.jar=${project.PircBot2-1}/dist/PircBot2.jar
 reference.PircBot2.jar=${project.PircBot2}/dist/PircBot2.jar
 run.classpath=\
     ${javac.classpath}:\
