--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /src/TPPDekuBot/PokemonImporter.java
 nbproject/private/private.xml
 /src/TPPDekuBot/MoveImporter.java
+/nbproject/
+nbproject/
+nbproject/project.properties
+nbproject/private/private.properties
+nbproject/genfiles.properties
+nbproject/build-impl.xml
