Added Pain Split move effect

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ nbproject/private/private.properties
 nbproject/genfiles.properties
 nbproject/build-impl.xml
 /src/TPPDekuBot/MoveExporter.java
+/dist/
